--- a/tex/copyright.tex
+++ b/tex/copyright.tex
@@ -1,8 +1,10 @@
 \noindent \copyright 2025 Eason Shao.
 
-\noindent The text, PDF and Web Page is licensed under a \href{https://creativecommons.org/licenses/by-nc-nd/4.0/}{CC BY-NC-ND 4.0} licence.
+\noindent The text, PDF and webpage is licensed under a \href{https://creativecommons.org/licenses/by-nc-nd/4.0/}{CC BY-NC-ND 4.0} licence.
 
 \noindent The source files are licensed under a \href{https://www.gnu.org/licenses/gpl-3.0.en.html#license-text}{GNU GPL 3.0} licence.
+
+\noindent The PDF file can be found \href{https://step.easonshao.com/latest.pdf}{here}, and the webpage version is available \href{https://step.easonshao.com/}{here}.
 
 \noindent This work is formatted using \LaTeX.
 
