--- a/tex/2017/III/12.tex
+++ b/tex/2017/III/12.tex
@@ -64,7 +64,7 @@
         &= \frac{(2n+1)(n+1)}{6} - \frac{(7n+5)^2}{144}\\
         &= \frac{48n^2 + 72n + 24}{144} - \frac{49n^2 + 70n + 25}{144}\\
         &= \frac{-n^2 + 2n - 1}{144}\\
-        &= -\frac{(n-1)^2}{144}
+        &= -\frac{(n-1)^2}{144}\\
         &< 0,
     \end{align*}
     as desired.
