add step iii 2016 q1.

--- a/main.tex
+++ b/main.tex
@@ -19,6 +19,9 @@
 \tableofcontents
 
 \pagestyle{fancy}
+\Year{2016}
+\include{\TexPath/2016/III/III}
+
 \Year{2017}
 \include{\TexPath/2017/I/I}
 \include{\TexPath/2017/II/II}
