--- a/tex/premeable.tex
+++ b/tex/premeable.tex
@@ -14,6 +14,10 @@
     \subsection{Question #1}
 }
 
+\newcommand{\WorkInProgress}{
+    Work in progress.
+}
+
 \newcommand{\Title}{STEP Project}
 \newcommand{\SubTitle}{A Solution Booklet to STEP questions}
 \newcommand{\Author}{Eason Shao}
