--- a/sty/eason.sty
+++ b/sty/eason.sty
@@ -60,6 +60,8 @@
 
 % Other Math Symbols
 \newcommand{\Abs}[1]{\left\vert#1\right\vert}
+\newcommand{\LHS}{\text{LHS}}
+\newcommand{\RHS}{\text{RHS}}
 
 % Text Symbols
 \newcommand{\GitHubHref}[2]{
