don't run this script. just don't

--- a/sty/eason.sty
+++ b/sty/eason.sty
@@ -24,6 +24,8 @@
 
 \usepackage{etoolbox}
 
+\usepackage{titlesec}
+
 % Differentiation
 % https://tex.stackexchange.com/a/60546/
 \newcommand{\Diff}{\mathop{}\!\mathrm{d}}
@@ -73,19 +75,19 @@
     \begin{titlepage}
         \begin{center}
             \LARGE #1
-    
+
             \bigskip
             \bigskip
-    
+
             \Large #2
-    
+
             \bigskip
             \bigskip
-    
+
             \large #3
-    
+
             \bigskip
-    
+
             \large #4
         \end{center}
     \end{titlepage}
