--- a/main.tex
+++ b/main.tex
@@ -19,11 +19,6 @@
 \tableofcontents
 
 \pagestyle{fancy}
-\Year{2016}
-\include{\TexPath/2016/III/III}
-
-\Year{2017}
-\include{\TexPath/2017/I/I}
-\include{\TexPath/2017/II/II}
-\include{\TexPath/2017/III/III}
+\include{\TexPath/2016/2016}
+\include{\TexPath/2017/2017}
 \end{document}
