--- a/main.tex
+++ b/main.tex
@@ -19,6 +19,6 @@
 \tableofcontents
 
 \pagestyle{fancy}
-\include{\TexPath/2016/2016}
-\include{\TexPath/2017/2017}
+\include{\TexPath/2016}
+\include{\TexPath/2017}
 \end{document}
