change display format to make it nicer.

--- a/sty/eason.sty
+++ b/sty/eason.sty
@@ -20,11 +20,12 @@
 \usepackage{hyperref}
 
 \usepackage{currfile}
+\usepackage{tocloft}
 \usepackage{etoc}
 
-\usepackage{etoolbox}
-
 \usepackage{titlesec}
+
+\usepackage{etoolbox}
 
 % Differentiation
 % https://tex.stackexchange.com/a/60546/
