add minitoc (gave up etoc), split up page.

--- a/main.tex
+++ b/main.tex
@@ -5,7 +5,7 @@
 \input{\TexPath/premeable}
 
 \begin{document}
-
+\dominitoc
 \begin{titlepage}
     \MakeTitlePage{\Title}{\SubTitle}{\Author}{\Date}
 \end{titlepage}
