--- a/tex/copyright.tex
+++ b/tex/copyright.tex
@@ -4,7 +4,7 @@
 
 \noindent The source files are licensed under a \href{https://www.gnu.org/licenses/gpl-3.0.en.html#license-text}{GNU GPL 3.0} licence.
 
-\noindent The PDF file can be found \href{https://step.easonshao.com/latest.pdf}{here}, with all the generated files \href{https://step.easonshao.com/latest/latest.pdf}{here}.
+\noindent The PDF file can be found \href{https://step.easonshao.com/latest.pdf}{here}, with all the generated files \href{https://step.easonshao.com/generated/pdf}{here}.
 
 \noindent The webpage version is available \href{https://step.easonshao.com/}{here}.
 
