--- a/sty/eason.sty
+++ b/sty/eason.sty
@@ -46,6 +46,8 @@
 \newcommand{\RR}{\mathbb{R}}
 \newcommand{\CC}{\mathbb{C}}
 
+\newcommand{\PP}{\mathbb{P}}
+
 % Probabililty
 \DeclareMathOperator{\Cov}{Cov}
 \DeclareMathOperator{\Var}{Var}
@@ -54,6 +56,7 @@
 % UK Notation
 \DeclareMathOperator{\Prob}{P}
 \DeclareMathOperator{\Cosec}{cosec}
+\DeclareMathOperator{\Cosech}{cosech}
 
 % Other Math Symbols
 \newcommand{\Abs}[1]{\left\vert#1\right\vert}
