add missing trig fns, do step 3 2016 q3.

--- a/sty/eason.sty
+++ b/sty/eason.sty
@@ -52,11 +52,29 @@
 \DeclareMathOperator{\Cov}{Cov}
 \DeclareMathOperator{\Var}{Var}
 \DeclareMathOperator{\Expt}{E}
+\DeclareMathOperator{\Prob}{P}
+
+% Missing Trigonometric & Hyperbolic functions
+\DeclareMathOperator{\cosec}{cosec}
+
+\DeclareMathOperator{\arccot}{arccot}
+\DeclareMathOperator{\arcsec}{arcsec}
+\DeclareMathOperator{\arccsc}{arccsc}
+
+\DeclareMathOperator{\sech}{sech}
+\DeclareMathOperator{\csch}{csch}
+
+\DeclareMathOperator{\arsinh}{arsinh}
+\DeclareMathOperator{\arcosh}{arcosh}
+\DeclareMathOperator{\artanh}{artanh}
+\DeclareMathOperator{\arcoth}{arcoth}
+\DeclareMathOperator{\arsech}{arsech}
+\DeclareMathOperator{\arcsch}{arcsch}
 
 % UK Notation
-\DeclareMathOperator{\Prob}{P}
-\DeclareMathOperator{\Cosec}{cosec}
-\DeclareMathOperator{\Cosech}{cosech}
+\DeclareMathOperator{\arccosec}{arccosec}
+\DeclareMathOperator{\cosech}{cosech}
+\DeclareMathOperator{\arcosech}{arcosech}
 
 % Other Math Symbols
 \newcommand{\Abs}[1]{\left\vert#1\right\vert}
