--- a/tex/2017/3/6.tex
+++ b/tex/2017/3/6.tex
@@ -1,14 +1,22 @@
 \Question{\currfilebase}
 
 \begin{enumerate}
-    \item We have
+    \item Consider the substitution \(u = \frac{1}{v}\).
+
+          When \(u \to 0^{+}\), \(v \to +\infty\).
+
+          When \(u = x\), \(v = \frac{1}{x}\).
+
+          We also have
+          \[
+              \Diff u = - \frac{1}{v^2} \Diff v.
+          \]
+          Therefore,
           \begin{align*}
-              T(x) & = \int_0^x \frac{\Diff u}{1 + u^2}                                                                                 \\
-                   & \xlongequal[\substack{u=0^+, v=+\infty                                                                             \\
-              u=x, v=\frac{1}{x}}]{\substack{u = \frac{1}{v}                                                                            \\
-              \Diff u = - \frac{1}{v^2} \Diff v}} \int_{+\infty}^{\frac{1}{x}} -\frac{1}{v^2} \cdot \frac{1}{1 + \frac{1}{v^2}} \Diff v \\
-                   & = \int_{\frac{1}{x}}^{+\infty} \frac{\Diff v}{1 + v^2}                                                             \\
-                   & = \int_{0}^{+\infty} \frac{\Diff v}{1 + v^2} - \int_{0}^{\frac{1}{x}} \frac{\Diff v}{1 + v^2}                      \\
+              T(x) & = \int_0^x \frac{\Diff u}{1 + u^2}                                                            \\
+                   & = \int_{+\infty}^{\frac{1}{x}} -\frac{1}{v^2} \cdot \frac{1}{1 + \frac{1}{v^2}} \Diff v       \\
+                   & = \int_{\frac{1}{x}}^{+\infty} \frac{\Diff v}{1 + v^2}                                        \\
+                   & = \int_{0}^{+\infty} \frac{\Diff v}{1 + v^2} - \int_{0}^{\frac{1}{x}} \frac{\Diff v}{1 + v^2} \\
                    & = T_{\infty} - T(x^{-1}),
           \end{align*}
           as desired.
