--- a/tex/premeable.tex
+++ b/tex/premeable.tex
@@ -1,12 +1,19 @@
+% Page Format
+\usepackage[a4paper,margin=1in]{geometry}
+
+% TOC Format
 \usepackage{tocloft}
 \renewcommand{\cftchapnumwidth}{3em}
 \renewcommand{\cftsecnumwidth}{4em}
 \renewcommand{\cftsubsecnumwidth}{5em}
 
+% Header Format
+\usepackage{titlesec}
 \titleformat{\chapter}[display]{\bfseries\Huge}{}{0em}{}
 \titleformat{\section}[block]{\bfseries\Large}{\thechapter}{1em}{}
 \titleformat{\subsection}[block]{\bfseries\large}{\thesection}{1em}{}
 
+% Mini TOC
 \usepackage[tight]{minitoc}
 \nomtcrule
 
@@ -14,13 +21,15 @@
 
 \renewcommand{\mtctitle}{}
 
+% Headers
+\renewcommand{\chaptermark}[1]{\markboth{#1}{}}
+\renewcommand{\sectionmark}[1]{\markright{#1}{}}
+
 \newcommand{\SubOne}[1]{\numexpr#1-1}
 
 \newcommand{\Year}[1]{
     \setcounter{chapter}{\SubOne{#1}}
     \chapter{Year #1}
-    % \etocsetnexttocdepth{1}
-    % \localtableofcontents
     \thispagestyle{chapterOnly}
     \minitoc
 }
@@ -28,8 +37,6 @@
     \clearpage
     \setcounter{section}{\SubOne{#1}}
     \section{Paper #1}
-    % \etocsetnexttocdepth{2}
-    % \localtableofcontents
 }
 \newcommand{\Question}[1]{
     \clearpage
@@ -45,6 +52,12 @@
 \newcommand{\SubTitle}{A Solution Booklet to STEP questions}
 \newcommand{\Author}{Eason Shao}
 \newcommand{\Date}{\today}
+
+
+% Title & Subtitle
+\title{\Title}
+\author{\Author}
+\date{\Date}
 
 % Page Layout
 \newcommand{\SetFooter}{
