add link to file by-year/paper/question

--- a/tex/copyright.tex
+++ b/tex/copyright.tex
@@ -6,6 +6,8 @@
 
 \noindent The PDF file can be found \href{\BasePath latest.pdf}{here}, with all the generated files \href{\BasePath generated/pdf}{here}.
 
+\noindent The PDF files split up \href{\BasePath generated/pdf/years}{by year}, \href{\BasePath generated/pdf/papers}{by paper} and \href{\BasePath generated/pdf/questions}{by question} are available as well.
+
 \noindent The webpage version is available \href{\BasePath}{here}.
 
 \noindent This work is formatted using \LaTeX.
