remove questions that are not going to be done in the near future.

--- a/tex/2017/3.tex
+++ b/tex/2017/3.tex
@@ -8,8 +8,8 @@
 \input{\currfiledir\currfilebase/6}
 \input{\currfiledir\currfilebase/7}
 \input{\currfiledir\currfilebase/8}
-\input{\currfiledir\currfilebase/9}
-\input{\currfiledir\currfilebase/10}
-\input{\currfiledir\currfilebase/11}
+% \input{\currfiledir\currfilebase/9}
+% \input{\currfiledir\currfilebase/10}
+% \input{\currfiledir\currfilebase/11}
 \input{\currfiledir\currfilebase/12}
 \input{\currfiledir\currfilebase/13}
