change some symbols.

--- a/sty/eason.sty
+++ b/sty/eason.sty
@@ -74,7 +74,8 @@
 \DeclareMathOperator{\arcosech}{arcosech}
 
 % Other Math Symbols
-\newcommand{\Abs}[1]{\left\vert#1\right\vert}
+\newcommand{\divides}{\mid}
+\newcommand{\abs}[1]{\left\lvert#1\right\rvert}
 \newcommand{\LHS}{\text{LHS}}
 \newcommand{\RHS}{\text{RHS}}
 
