--- a/tex/2016/3/3.tex
+++ b/tex/2016/3/3.tex
@@ -20,7 +20,7 @@
 
           Since \(Q(x) \in \PP[x]\), we must have
           \[
-              (x + 1) | Q(x)
+              (x + 1) \divides Q(x)
           \]
           as desired.
 
