--- a/tex/2017/3/13.tex
+++ b/tex/2017/3/13.tex
@@ -41,7 +41,7 @@ For \(y \in \left(\frac{1}{12}, \frac{1}{3}\right]\), we have
 \begin{align*}
     G(y) = \Prob(Y \leq y) & = \Prob(V(X) \leq y)                                                                                        \\
                            & = \Prob\left(\left(x - \frac{1}{2}\right)^2 + \frac{1}{12} \leq y\right)                                    \\
-                           & = \Prob\left(\Abs{x - \frac{1}{2}} \leq \sqrt{y - \frac{1}{12}}\right)                                      \\
+                           & = \Prob\left(\abs{x - \frac{1}{2}} \leq \sqrt{y - \frac{1}{12}}\right)                                      \\
                            & = \Prob\left(\frac{1}{2} - \sqrt{y - \frac{1}{12}} \leq x \leq \frac{1}{2} + \sqrt{y - \frac{1}{12}}\right) \\
                            & = F\left(\frac{1}{2} + \sqrt{y - \frac{1}{12}}\right) - F\left(\frac{1}{2} - \sqrt{y - \frac{1}{12}}\right) \\
                            & = \left(\frac{1}{2} + \sqrt{y - \frac{1}{12}}\right) - \left(\frac{1}{2} - \sqrt{y - \frac{1}{12}}\right)   \\
