--- a/tex/2017/3/5.tex
+++ b/tex/2017/3/5.tex
@@ -60,7 +60,7 @@ Notice that
 \]
 integrating both sides gives us
 \[
-    \ln f(\theta) = \ln \Abs{\sin \theta - 1} + C = \ln \left(1 - \sin \theta\right) + C,
+    \ln f(\theta) = \ln \abs{\sin \theta - 1} + C = \ln \left(1 - \sin \theta\right) + C,
 \]
 which gives
 \[
