--- a/tex/2017/3/2.tex
+++ b/tex/2017/3/2.tex
@@ -25,9 +25,11 @@
 
           Multiplying both sides by \(\exp\left(-\frac{i(\theta + \phi)}{2}\right)\), we have
           \begin{align*}
-                                                           & c \left[\exp\left(-\frac{i(\theta + \phi)}{2}\right) - \exp\left(\frac{i (\theta + \phi)}{2}\right)\right]                                                \\
-                                                           & = a \left[\exp\left(\frac{i(\phi - \theta)}{2}\right) - \exp\left(\frac{i(\theta + \phi)}{2}\right)\right]                                                \\
-                                                           & + b\left[\exp\left(-\frac{i(\theta + \phi)}{2}\right) - \exp\left(\frac{i(\phi - \theta)}{2}\right)\right],                                               \\
+               & \phantom{=} c \left[\exp\left(-\frac{i(\theta + \phi)}{2}\right) - \exp\left(\frac{i (\theta + \phi)}{2}\right)\right]                                                                                                 \\
+               & = a \left[\exp\left(\frac{i(\phi - \theta)}{2}\right) - \exp\left(\frac{i(\theta + \phi)}{2}\right)\right] + b\left[\exp\left(-\frac{i(\theta + \phi)}{2}\right) - \exp\left(\frac{i(\phi - \theta)}{2}\right)\right],
+          \end{align*}
+          and hence
+          \begin{align*}
               -2ci\sin\left(\frac{\theta + \phi}{2}\right) & = - 2 ai \exp\left(\frac{i\phi}{2}\right) \sin \left(\frac{\theta}{2}\right) - 2 bi \exp\left(-\frac{i\theta}{2}\right) \sin \left(\frac{\phi}{2}\right), \\
               c \sin\left(\frac{\theta + \phi}{2}\right)   & = a \exp\left(\frac{i\phi}{2}\right) \sin \left(\frac{\theta}{2}\right) + b \exp\left(-\frac{i\theta}{2}\right) \sin \left(\frac{\phi}{2}\right).
           \end{align*}
