--- a/tex/2016/3/13.tex
+++ b/tex/2016/3/13.tex
@@ -1,2 +1,127 @@
 \Question{\currfilebase}
-\WorkInProgress
+
+For a random variable \(X\) with \(\Expt(X) = \mu\) and \(\Var(X) = \sigma^2\), we have
+\[
+    \kappa(X) = \frac{\Expt\left[(X - \mu)^4\right]}{\sigma^4} - 3
+\]
+
+We have \(Y = X - a\). Therefore, \(\Expt(Y) = \mu - a\) and \(\Var(Y) = \sigma^2\).
+
+\begin{align*}
+    \kappa(Y) & = \frac{\Expt\left[(Y - (\mu - a))^4\right]}{\sigma^4} - 3       \\
+              & = \frac{\Expt\left[((X - a) - (\mu - a))^4\right]}{\sigma^4} - 3 \\
+              & = \frac{\Expt\left[(X - \mu)^4\right]}{\sigma^4} - 3             \\
+              & = \kappa(X),
+\end{align*}
+as desired.
+
+\begin{enumerate}
+    \item Let \(X \sim N(0, \sigma^2)\), \(\mu = 0\).
+          Notice that
+          \begin{align*}
+              \kappa(X) = \frac{\Expt(X^4)}{\sigma^4} - 3.
+          \end{align*}
+
+          \(X\) has p.d.f.
+          \[
+              f_X(x) = \frac{1}{\sigma\sqrt{2\pi}}\exp\left(-\frac{x^2}{2\sigma^2}\right).
+          \]
+
+          Therefore,
+          \[
+              \Expt(X^4) = \frac{1}{\sigma\sqrt{2\pi}} \int_{-\infty}^{+\infty} x^4 \exp\left(-\frac{x^2}{2\sigma^2}\right) \Diff x.
+          \]
+
+          Now, consider using integration by parts. Notice that
+          \[
+              \Diff \exp\left(-\frac{x^2}{2\sigma^2}\right) = - \frac{x}{\sigma^2} \exp\left(-\frac{x^2}{2\sigma^2}\right) \Diff x,
+          \]
+          and therefore, using integration by parts, we have
+          \begin{align*}
+               & \phantom{=} \int x^4 \exp\left(-\frac{x^2}{2\sigma^2}\right) \Diff x                                                               \\
+               & = - \sigma^2 \int x^3 \Diff \exp\left(-\frac{x^2}{2\sigma^2}\right)                                                                \\
+               & = - \sigma^2 \left[ x^3 \exp\left(-\frac{x^2}{2\sigma^2}\right) - \int \exp\left(-\frac{x^2}{2\sigma^2}\right) \Diff (x^3) \right] \\
+               & = 3 \sigma^2 \int x^2 \exp\left(-\frac{x^2}{2\sigma^2}\right) \Diff x - \sigma^2 x^3 \exp\left(-\frac{x^2}{2\sigma^2}\right).
+          \end{align*}
+
+          Therefore, considering the definite integral, we have
+          \begin{align*}
+              \Expt(X^4) & = \frac{1}{\sigma\sqrt{2\pi}} \int_{-\infty}^{+\infty} x^4 \exp\left(-\frac{x^2}{2\sigma^2}\right) \Diff x                                                                                                 \\
+                         & = \frac{\sigma}{\sqrt{2\pi}} \left[3 \int_{-\infty}^{+\infty} x^2 \exp \left(- \frac{x^2}{2\sigma^2}\right)\Diff x - \left[x^3 \exp\left(- \frac{x^2}{2 \sigma^2}\right)\right]^{+\infty}_{-\infty}\right] \\
+                         & = \frac{\sigma}{\sqrt{2\pi}} \left[3 \cdot \sigma \sqrt{2\pi} \cdot \sigma^2 - 0\right]                                                                                                                    \\
+                         & = 3 \sigma^4.
+          \end{align*}
+
+          Therefore,
+          \[
+              \kappa(X) = \frac{\Expt(X^4)}{\sigma^4} - 3 = \frac{3 \sigma^4}{\sigma^4} - 3 = 0,
+          \]
+          as desired.
+
+          An alternative solution exists using generating functions.
+
+          Recall that a general normal distribution \(N(\mu, \sigma^2)\) has MGF
+          \[
+              M(t) = \exp(\mu t + \frac{\sigma^2}{2}t^2),
+          \]
+          and hence
+          \begin{align*}
+              M_X(t) & = \exp \left(\frac{\sigma^2}{2}t^2\right)                                                          \\
+                     & = 1 + \left(\frac{\sigma^2}{2}t^2\right) + \frac{\left(\frac{\sigma^2}{2}t^2\right)}{2!} + \ldots.
+          \end{align*}
+
+          Therefore,
+          \[
+              \Expt(X^4) = M^{(4)}_X(0) = \left(\frac{\sigma^2}{2}\right)^4 \cdot 4! = 3 \sigma^4,
+          \]
+          and the result follows.
+
+    \item Notice that
+          \begin{align*}
+               & \phantom{=} T^4                                                                                                                          \\
+               & = \sum_{a} \binom{4}{4} Y_a^4 + \sum_{a < b} \left[\binom{4}{1, 3}Y_a Y_b^3 + \binom{4}{2, 2}Y_a^2 Y_b^2\right]                          \\
+               & \phantom{=} + \sum_{a < b < c} \binom{4}{1, 1, 2}Y_a Y_b Y_c^2 + \sum_{a < b < c < d} \binom{4}{1, 1, 1, 1} Y_a Y_b Y_c Y_d              \\
+               & = \sum_{a}Y_a^4 + \sum_{a < b} (4Y_a Y_b^3 + 6Y_a^2 Y_b^2) + \sum_{a < b < c} 12Y_a Y_b Y_c^2 + \sum_{a < b < c < d} 24 Y_a Y_b Y_c Y_d,
+          \end{align*}
+          where
+          \[
+              \binom{n}{a_1, a_2, \ldots, a_k} = \frac{n!}{a_1!a_2!\ldots a_k!}, \sum_{i = 1}^{k} a_i = n
+          \]
+          stands for the multinomial coefficient.
+
+          Note that \(\Expt(Y_r) = 0\) for any \(r = 1, 2, \ldots, n\). Therefore,
+          \begin{align*}
+              \Expt(Y_a Y_b^3)       & = \Expt(Y_a) \Expt(Y_b^3) = 0,                     \\
+              \Expt(Y_a Y_b Y_c^2)   & = \Expt(Y_a) \Expt(Y_b) \Expt(Y_c^2) = 0,          \\
+              \Expt(Y_a Y_b Y_c Y_d) & = \Expt(Y_a) \Expt(Y_b) \Expt(Y_c) \Expt(Y_d) = 0.
+          \end{align*}
+
+          Therefore,
+          \begin{align*}
+              \Expt(T^4) & = \sum_a \Expt(Y_a^4) + \sum_{a < b} 6 \Expt(Y_a^2 Y_b^2)                                                \\
+                         & = \sum_{r = 1}^{n} \Expt(Y_r^4) + 6 \sum_{r = 1}^{n - 1} \sum_{s = r + 1}^{n} \Expt(Y_a^2) \Expt(Y_b^2),
+          \end{align*}
+          as desired.
+
+    \item Let \(Y_i = X_i - \mu\) for \(i = 1, 2, \ldots, n\), and \(\mu = \Expt(X), \sigma^2 = \Var(X) = \Var(Y)\) with \(\Expt(Y) = 0\)
+
+          Therefore, let \(T = \sum_{i}^{n} Y_i = \sum_{i}^{n} X_i - n\mu\), we must have \(\Expt(T) = 0\) and \(\Var(T) = n \sigma^2\).
+
+          But since the kurtosis remains constant with shifts, we must have that \(\kappa(Y_i) = \kappa\), and
+          \[
+              \kappa(T) = \kappa\left[\sum_{i}^{n} X_i \right].
+          \]
+
+          Hence, we have
+          \begin{align*}
+              \kappa\left[\sum_{i}^{n} X_i \right] & = \kappa(T)                                                                                                                                            \\
+                                                   & = \frac{\Expt(T^4)}{(n \sigma^2)^2} - 3                                                                                                                \\
+                                                   & = \frac{\sum_{r = 1}^{n} \Expt(Y_r^4) + 6 \sum_{r = 1}^{n - 1} \sum_{s = r + 1}^{n} \Expt(Y_a^2) \Expt(Y_b^2)}{n^2 \sigma^4} - 3                       \\
+                                                   & = \frac{1}{n^2} \sum_{r = 1}^{n} \frac{\Expt(Y_r^4)}{\sigma^4} + \frac{6}{n^2} \sum_{r = 1}^{n - 1} \sum_{s = r + 1}^{n} \frac{\sigma^4}{\sigma^4} - 3 \\
+                                                   & = \frac{1}{n^2} n \cdot (\kappa + 3) + \frac{6}{n^2} \binom{n}{2} - 3                                                                                  \\
+                                                   & = \frac{\kappa}{n} + \frac{3n + 3n(n - 1) - 3n^2}{n^2}                                                                                                 \\
+                                                   & = \frac{\kappa}{n} + 0                                                                                                                                 \\
+                                                   & = \frac{\kappa}{n},
+          \end{align*}
+          as desired.
+\end{enumerate}
