--- a/sty/eason.sty
+++ b/sty/eason.sty
@@ -51,6 +51,13 @@
 \DeclareMathOperator{\Expt}{E}
 \DeclareMathOperator{\Prob}{P}
 
+% Distribution
+\DeclareMathOperator{\Binomial}{B}
+\DeclareMathOperator{\Poisson}{Po}
+\DeclareMathOperator{\Normal}{N}
+\DeclareMathOperator{\Exponential}{Exp}
+\DeclareMathOperator{\Uniform}{U}
+
 % Missing Trigonometric & Hyperbolic functions
 \DeclareMathOperator{\cosec}{cosec}
 
