--- a/tex/2016/3/13.tex
+++ b/tex/2016/3/13.tex
@@ -16,7 +16,7 @@ We have \(Y = X - a\). Therefore, \(\Expt(Y) = \mu - a\) and \(\Var(Y) = \sigma^
 as desired.
 
 \begin{enumerate}
-    \item Let \(X \sim N(0, \sigma^2)\), \(\mu = 0\).
+    \item Let \(X \sim \Normal(0, \sigma^2)\), \(\mu = 0\).
           Notice that
           \begin{align*}
               \kappa(X) = \frac{\Expt(X^4)}{\sigma^4} - 3.
@@ -60,7 +60,7 @@ as desired.
 
           An alternative solution exists using generating functions.
 
-          Recall that a general normal distribution \(N(\mu, \sigma^2)\) has MGF
+          Recall that a general normal distribution \(\Normal(\mu, \sigma^2)\) has MGF
           \[
               M(t) = \exp(\mu t + \frac{\sigma^2}{2}t^2),
           \]
