--- a/tex/2016/3/12.tex
+++ b/tex/2016/3/12.tex
@@ -1,2 +1,32 @@
 \Question{\currfilebase}
-\WorkInProgress
+
+\begin{enumerate}
+    \item Let \(X \sim \Binomial(100n, 0.2)\). We have \(\mu = 100n \cdot 0.2 = 20n\), and \(\sigma^2 = 100n \cdot 0.2 \cdot 0.8 = 16n\).
+
+          We have that
+          \begin{align*}
+              \alpha & = \Prob(16n \leq X \leq 24n)                  \\
+                     & = \Prob(\abs{(X - 20n)} \leq 4n)              \\
+                     & = \Prob(\abs{(X - \mu)} \leq \sigma \sqrt n)  \\
+                     & = 1 - \Prob(\abs{(X - \mu)} > \sigma \sqrt n) \\
+                     & \geq 1 - \frac{1}{\sqrt{n}^2}                 \\
+                     & = 1 - \frac{1}{n},
+          \end{align*}
+          as desired, where we applied the Chebyshev Inequality for \(k = \sqrt{n} > 0\).
+
+    \item Let \(X \sim \Poisson(n)\). Therefore, \(\mu = \Expt(X) = n\), \(\sigma = \sqrt{\Var(X)} = \sqrt{n}\). To show the desired inequality is equivalent to showing that
+          \[
+              \frac{1 + n + \frac{n^2}{2!} + \cdot + \frac{n^{2n}}{(2n!)}}{e^n} \geq 1 - \frac{1}{n}.
+          \]
+
+          Notice that the left-hand side is simply \(\Prob(0 \leq X \leq 2n)\). By the Chebyshev Inequality, we have
+          \begin{align*}
+              \LHS & = \Prob(0 \leq X \leq 2n)                \\
+                   & = \Prob(|X - \mu| \leq n)                \\
+                   & = \Prob(|X - \mu| \leq \sqrt{n} \sigma)  \\
+                   & = 1 - \Prob(|X - \mu| > \sqrt{n} \sigma) \\
+                   & \geq 1 - \frac{1}{n}                     \\
+                   & = \RHS,
+          \end{align*}
+          as desired, where we applied the Chebyshev Inequality for \(k = \sqrt{n} > 0\).
+\end{enumerate}
